--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A Special Surprise 🎉</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Permanent+Marker&family=Creepster&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Permanent+Marker&family=Creepster&family=Rubik+Glitch&display=swap" rel="stylesheet">
 
     <style>
-        /* YOUR ORIGINAL BACKGROUND & BASE STYLES */
+        /* --- CORE STYLES --- */
         body {
             margin: 0;
             font-family: 'Poppins', sans-serif;
@@ -21,7 +21,7 @@
             transition: background 0.5s;
         }
 
-        /* THE ORIGINAL PRANK SCREEN + NEW BUTTON */
+        /* --- PRANK BLUE SCREEN --- */
         #prank-screen {
             display: none;
             position: fixed;
@@ -39,7 +39,7 @@
             padding: 12px 25px; cursor: pointer; margin-top: 40px; border-radius: 2px;
         }
 
-        /* NEW SHOCKWAVE BLAST */
+        /* --- EXPLOSION EFFECT --- */
         #blast-zone {
             position: fixed; top: 0; left: 0; width: 100%; height: 100%;
             background: white; z-index: 100000; display: none;
@@ -54,7 +54,6 @@
             100% { transform: scale(150); opacity: 0; }
         }
 
-        /* MAIN CARD */
         .card {
             background: white;
             padding: 30px;
@@ -67,43 +66,55 @@
             z-index: 10;
         }
 
-        /* PHOTO WALL (YOUR ORIGINAL DESIGN) */
+        /* --- STAGE 3: PHOTO WALL --- */
         .photo-wall {
             display: none;
-            grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
-            gap: 15px; margin-top: 20px; max-height: 450px; overflow-y: auto; padding: 10px;
+            grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+            gap: 15px; margin-top: 20px; max-height: 400px; overflow-y: auto; padding: 10px;
             background: #fafafa; border-radius: 15px;
         }
         .photo-frame {
-            background: white; padding: 10px 10px 25px 10px; box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+            background: white; padding: 8px 8px 20px 8px; box-shadow: 0 5px 15px rgba(0,0,0,0.1);
             transform: rotate(var(--r)); transition: transform 0.3s;
         }
-        .photo-frame img { width: 100%; height: 140px; object-fit: contain; }
+        .photo-frame img { width: 100%; height: 120px; object-fit: contain; }
 
-        /* COMMAND CENTER BOXES */
-        .vault-container { display: flex; gap: 15px; margin: 25px 0; }
+        /* --- STAGE 4: HACKER HQ --- */
+        .vault-container { display: grid; grid-template-columns: 1fr 1fr; gap: 15px; margin: 25px 0; }
         .vault-box { 
-            flex: 1; background: #1a1a1a; border: 1px solid #ff5e99; padding: 20px 10px; 
-            cursor: pointer; font-family: monospace; color: #ff5e99; border-radius: 10px;
+            background: #0a1a0a; border: 1px solid #00ff41; padding: 20px 10px; 
+            cursor: pointer; font-family: 'Courier New', monospace; color: #00ff41; 
+            border-radius: 5px; text-transform: uppercase; font-size: 0.8em;
+            box-shadow: 0 0 8px #00ff4133;
         }
 
-        /* GIGI CHAOS PAGE */
+        /* --- STAGE 5: CHAOS MODE --- */
         #chaos-page { 
             position: fixed; top: 0; left: 0; width: 100%; height: 100%; 
             background: black; z-index: 100001; display: none; overflow: hidden;
+            animation: bg-glitch 0.2s infinite;
         }
-        .flying-gigi {
+        @keyframes bg-glitch {
+            0% { background: #000; }
+            50% { background: #0a140a; }
+            100% { background: #140a0a; }
+        }
+        .flying-text {
             position: absolute; pointer-events: none;
-            font-family: 'Creepster', cursive;
-            animation: glitch-fly 3s linear forwards;
+            font-family: 'Rubik Glitch', cursive;
+            animation: glitch-fly 2.5s linear forwards;
         }
         @keyframes glitch-fly {
-            0% { transform: scale(0.5); opacity: 0; }
-            10% { opacity: 1; }
+            0% { transform: scale(0.2); opacity: 0; }
+            20% { opacity: 1; }
             100% { transform: translate(var(--tx), var(--ty)) rotate(var(--tr)) scale(var(--ts)); opacity: 0; }
         }
+        #chaos-exit {
+            position: absolute; width: 10px; height: 10px; background: rgba(255,255,255,0.1);
+            border: none; cursor: pointer; z-index: 100005; border-radius: 50%;
+        }
 
-        /* YOUR ORIGINAL DECORATIONS */
+        /* --- ANIMATIONS & DECO --- */
         .sparkle { position: absolute; pointer-events: none; border-radius: 50%; animation: sparkle-fade 1s forwards; z-index: 9999; }
         @keyframes sparkle-fade { 0% { transform: scale(1); opacity: 1; } 100% { transform: scale(0); opacity: 0; } }
         .balloon { position: absolute; bottom: -100px; width: 45px; height: 55px; border-radius: 50%; opacity: 0.7; animation: float 7s infinite ease-in; }
@@ -123,13 +134,15 @@
     <button id="fix-btn" onclick="showRealSurprise()">Restart and Repair</button>
 </div>
 
-<div id="chaos-page"></div>
+<div id="chaos-page">
+    <button id="chaos-exit" onclick="finishStory()"></button>
+</div>
 
 <div class="card" id="main-card">
     <div id="setup-ui">
         <h1 style="color: #ff5e99;">Catch for Surprise! 🎂</h1>
         <p>I hope you're fast enough...</p>
-        <button id="main-btn" style="padding: 12px 25px; border: none; border-radius: 20px; background: #ff5e99; color: white; cursor: pointer;" onmouseover="escapeButton()" onclick="startUnwrap()">Click for Surprise 💝</button>
+        <button id="main-btn" onmouseover="escapeButton()" onclick="startUnwrap()" style="padding: 12px 25px; border: none; border-radius: 20px; background: #ff5e99; color: white; cursor: pointer;">Click for Surprise 💝</button>
     </div>
 
     <div id="unwrap-ui" class="hidden">
@@ -144,36 +157,41 @@
                 <div class="photo-frame" style="--r: 3deg;"><img src="https://media.giphy.com/media/Im6d35ebkCIiGzonjI/giphy.gif"></div>
                 <div class="photo-frame" style="--r: -2deg;"><img src="https://media.giphy.com/media/6WFScxN6fi95z3YVQD/giphy.gif"></div>
                 <div class="photo-frame" style="--r: 5deg;"><img src="https://media.giphy.com/media/9rO5Aksmn0dHQKXJAu/giphy.gif"></div>
+                <div class="photo-frame" style="--r: -3deg;"><img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExcmUwajF4Ym13OG1hamJiN2h0NTBic3FmdjlvdjQ4NTFzd3J0NzBjMSZlcD12MV9zdGlja2Vyc19zZWFyY2gmY3Q9cw/uJM2oQhGcieLyh91n0/giphy.gif"></div>
+                <div class="photo-frame" style="--r: 4deg;"><img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExazJhMmtobDF0NWZpZmJwdWdkZGpyOXZmMGNpa3hoc3BsbzN6aDk5YSZlcD12MV9zdGlja2Vyc19zZWFyY2gmY3Q9cw/YTU8FmRxr8kSpkQoZC/giphy.gif"></div>
+                <div class="photo-frame" style="--r: -5deg;"><img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExazJhMmtobDF0NWZpZmJwdWdkZGpyOXZmMGNpa3hoc3BsbzN6aDk5YSZlcD12MV9zdGlja2Vyc19zZWFyY2gmY3Q9cw/iOR3rCOOqvYC5Ja8Lz/giphy.gif"></div>
+                <div class="photo-frame" style="--r: 2deg;"><img src="https://media.giphy.com/media/v1.Y2lkPWVjZjA1ZTQ3cHBwd2FhNjVkNngxeW92YXZhdHFzMGgxams4b2wwaW53cng2eW9nMiZlcD12MV9zdGlja2Vyc19zZWFyY2gmY3Q9cw/lnVQCrjH3hCdgUhobk/giphy.gif"></div>
+                <div class="photo-frame" style="--r: 3deg;"><img src="https://media.giphy.com/media/v1.Y2lkPWVjZjA1ZTQ3eHV2NTVsY3A5d2FxbWx4d2Q5aWdsZjQ5cHF6c3Q3eDYxcXpmZTFoaSZlcD12MV9zdGlja2Vyc19zZWFyY2gmY3Q9cw/sxXKXh2zytqfhbE5ll/giphy.gif"></div>
             </div>
-            <p style="font-family: 'Creepster'; font-size: 1.8em; margin-top: 30px; color: #333;">
-                GUESS WHO IS UNDER THE BED... <br> LARRY! 😈
-            </p>
+            <p style="font-family: 'Creepster'; font-size: 1.8em; margin-top: 30px;">GUESS WHO IS UNDER THE BED... <br> LARRY! 😈</p>
             <button onclick="goToHQ()" style="margin-top: 20px; background: #333; color: white; padding: 10px 20px; border: none; border-radius: 10px; cursor: pointer;">Enter HQ 👀</button>
         </div>
     </div>
 
     <div id="page4" class="hidden">
-        <h1 style="color: #ff5e99; font-family: 'Permanent Marker';">COMMAND CENTER</h1>
-        <div class="vault-container">
-            <div class="vault-box" onclick="this.innerText='Gigi is watching...'">CLASSIFIED</div>
-            <div class="vault-box" onclick="this.innerText='Bed is occupied.'">TOP SECRET</div>
-            <div class="vault-box" onclick="this.innerText='Larry loves cake.'">ENCRYPTED</div>
+        <h1 style="color: #00ff41; font-family: 'Courier New';">SYSTEM BREACHED</h1>
+        <div class="vault-container" id="hq-vault">
+            <div class="vault-box" onclick="this.innerText='Larry is watching through the webcam...'">ACCESS LOGS</div>
+            <div class="vault-box" onclick="this.innerText='Target is too cute. Firewall bypassed.'">ENCRYPTION</div>
+            <div class="vault-box" onclick="this.innerText='I know where you hide the snacks.'">STALKER DATA</div>
+            <div class="vault-box" onclick="this.innerText='Under the bed? I am everywhere.'">LOCATION</div>
+            <div class="vault-box" onclick="this.innerText='Scanning for birthday cake... Found.'">RADAR SCAN</div>
+            <div class="vault-box" onclick="this.innerText='Initialize Larry-bot Protocol...'">SYSTEM OPS</div>
         </div>
-        <button onclick="triggerChaos()" style="background: #ff5e99; color: white; padding: 15px; width: 100%; border: none; border-radius: 10px; font-weight: bold; cursor: pointer;">GIMME GIGI 🤪</button>
+        <button onclick="triggerChaos()" style="background: #00ff41; color: black; padding: 15px; width: 100%; border: none; border-radius: 10px; font-weight: bold; cursor: pointer; font-family: 'Courier New';">INITIALIZE CHAOS PROTOCOL 🤪</button>
     </div>
 
     <div id="final-page" class="hidden">
         <h1 style="font-size: 4em;">💖</h1>
-        <h1 style="color: #ff5e99;">Enjoy your day, Nishi!</h1>
+        <h1 style="color: #ff5e99;">Happy Birthday!</h1>
         <p>Hope you liked the surprise!</p>
     </div>
 </div>
 
 <script>
-    let escapes = 0;
-    let giftClicks = 0;
+    let escapes = 0; let giftClicks = 0;
 
-    // 1. ESCAPING BUTTON (10 JUMPS)
+    // --- ESCAPE BUTTON LOGIC ---
     function escapeButton() {
         const btn = document.getElementById('main-btn');
         if (escapes < 10) {
@@ -183,7 +201,6 @@
             escapes++;
         } else {
             btn.style.position = 'static';
-            btn.style.background = "#2ecc71";
             btn.innerText = "Click Me! ✨";
         }
     }
@@ -196,12 +213,10 @@
         }
     }
 
-    // 2. GIFT CLICKS (7 CLICKS + BLAST)
+    // --- GIFT & BLUE SCREEN LOGIC ---
     function handleGiftClick() {
         giftClicks++;
-        const gift = document.getElementById('gift-icon');
-        gift.style.transform = `scale(${1 + giftClicks * 0.2})`;
-        
+        document.getElementById('gift-icon').style.transform = `scale(${1 + giftClicks * 0.2})`;
         if (giftClicks >= 7) {
             document.getElementById('blast-zone').style.display = 'flex';
             setTimeout(() => {
@@ -211,7 +226,6 @@
         }
     }
 
-    // 3. SHOW REVEAL
     function showRealSurprise() {
         document.getElementById('prank-screen').style.display = 'none';
         document.getElementById('gift-title').classList.add('hidden');
@@ -222,41 +236,46 @@
         spawnConfetti();
     }
 
+    // --- HQ & CHAOS LOGIC ---
     function goToHQ() {
         document.getElementById('unwrap-ui').classList.add('hidden');
         document.getElementById('page4').classList.remove('hidden');
-        document.body.style.background = '#000';
+        document.body.style.background = '#0a0a0a';
+        const vault = document.getElementById('hq-vault');
+        for (let i = vault.children.length; i >= 0; i--) { vault.appendChild(vault.children[Math.random() * i | 0]); }
     }
 
-    // 4. GIGI CHAOS
     function triggerChaos() {
         const chaos = document.getElementById('chaos-page');
         chaos.style.display = 'block';
-        const colors = ['#000000', '#ffffff', '#ff5e99', '#800080', '#ff0000'];
+        const exit = document.getElementById('chaos-exit');
+        exit.style.top = Math.random() * 90 + 5 + '%';
+        exit.style.left = Math.random() * 90 + 5 + '%';
 
-        for(let i=0; i<80; i++) {
-            const g = document.createElement('div');
-            g.className = 'flying-gigi';
-            g.innerText = Math.random() > 0.5 ? 'GIGI!' : 'LARRY!';
-            g.style.left = '50%'; g.style.top = '50%';
-            g.style.color = colors[Math.floor(Math.random() * colors.length)];
-            g.style.fontSize = (Math.random() * 80 + 20) + 'px';
-            g.style.setProperty('--tx', (Math.random() - 0.5) * 2000 + 'px');
-            g.style.setProperty('--ty', (Math.random() - 0.5) * 2000 + 'px');
-            g.style.setProperty('--ts', Math.random() * 3);
-            g.style.setProperty('--tr', Math.random() * 720 + 'deg');
-            chaos.appendChild(g);
-        }
-
-        setTimeout(() => {
-            chaos.style.display = 'none';
-            document.getElementById('page4').classList.add('hidden');
-            document.getElementById('final-page').classList.remove('hidden');
-            document.body.style.background = 'linear-gradient(135deg, #ffd6e8, #cce7ff)';
-        }, 3500);
+        setInterval(() => {
+            const t = document.createElement('div');
+            t.className = 'flying-text';
+            t.innerText = Math.random() > 0.5 ? 'GIGI!' : 'LARRY!';
+            t.style.left = Math.random() * 100 + '%'; t.style.top = Math.random() * 100 + '%';
+            t.style.color = ['#00ff41', '#ff0000', '#ffffff'][Math.floor(Math.random()*3)];
+            t.style.fontSize = (Math.random() * 80 + 30) + 'px';
+            t.style.setProperty('--tx', (Math.random() - 0.5) * 1200 + 'px');
+            t.style.setProperty('--ty', (Math.random() - 0.5) * 1200 + 'px');
+            t.style.setProperty('--ts', Math.random() * 3);
+            t.style.setProperty('--tr', Math.random() * 720 + 'deg');
+            chaos.appendChild(t);
+            setTimeout(() => t.remove(), 2500);
+        }, 60);
     }
 
-    // YOUR ORIGINAL DECORATIONS LOGIC
+    function finishStory() {
+        document.getElementById('chaos-page').style.display = 'none';
+        document.getElementById('page4').classList.add('hidden');
+        document.getElementById('final-page').classList.remove('hidden');
+        document.body.style.background = 'linear-gradient(135deg, #ffd6e8, #cce7ff)';
+    }
+
+    // --- VISUAL EFFECTS ---
     setInterval(() => {
         const b = document.createElement("div");
         b.className = "balloon";
@@ -270,7 +289,7 @@
         const s = document.createElement('div');
         s.className = 'sparkle';
         s.style.left = e.pageX + 'px'; s.style.top = e.pageY + 'px';
-        s.style.background = `hsl(${Math.random() * 360}, 100%, 80%)`;
+        s.style.background = `white`;
         document.body.appendChild(s);
         setTimeout(() => s.remove(), 1000);
     });
